--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -125,6 +125,12 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
 	mode dock
-	tray_output HDMI1
         status_command i3status
 }
+
+# nm-applet
+exec nm-applet
+
+# dropbox
+exec dropboxd
+
