--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -13,26 +13,32 @@ general {
 
 order += "ipv6"
 order += "disk /"
-order += "run_watch DHCP"
-order += "run_watch VPN"
-order += "wireless wlan0"
-order += "ethernet eth0"
+order += "disk /home/"
+#order += "run_watch DHCP"
+#order += "run_watch VPN"
+order += "wireless wlp3s0"
+order += "ethernet enp0s25"
 order += "battery 0"
+order += "battery 1"
 order += "load"
 order += "tztime local"
 
-wireless wlan0 {
+wireless wlp3s0 {
         format_up = "W: (%quality at %essid) %ip"
         format_down = "W: down"
 }
 
-ethernet eth0 {
+ethernet enp0s25 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
 }
 
 battery 0 {
+        format = "%status %percentage %remaining"
+}
+
+battery 1 {
         format = "%status %percentage %remaining"
 }
 
@@ -52,6 +58,10 @@ load {
         format = "%1min"
 }
 
+disk "/home/" {
+        format = "/home %free"
+}
+
 disk "/" {
-        format = "%free"
+        format = "/ %free"
 }
