--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -28,7 +28,7 @@ wireless wlp3s0 {
         format_down = "W: down"
 }
 
-ethernet enp0s25 {
+ethernet eth0 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
