--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,13 @@
 [submodule "vim/.vim/bundle/vundle"]
 	path = vim/.vim/bundle/vundle
-	url = git://github.com/gmarik/vundle
+	url = http://github.com/gmarik/vundle
 
 [submodule "vim/.vim/bundle/nerdtree"]
 	path = vim/.vim/bundle/nerdtree
-	url = git://github.com/scrooloose/nerdtree
+	url = https://github.com/scrooloose/nerdtree
 
 [submodule "vim/.vim/bundle/nerdcommenter"]
 	path = vim/.vim/bundle/nerdcommenter
-	url = https://github.com/scrooloose/nerdcommenter
+	url = http://github.com/scrooloose/nerdcommenter
+
+
